--- a/Code.ipynb
+++ b/Code.ipynb
@@ -124,7 +124,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = \"C:/Users/pifar/iCloudDrive/Francesc/Tdr/Music/Violin/Data/\""
+    "path = \"Data/\""
    ]
   },
   {
@@ -1342,7 +1342,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_notes = \"C:/Users/pifar/iCloudDrive/Francesc/Tdr/Music/Violin/Models/notes_model.h5py\""
+    "save_notes = \"Models/notes_model.h5py\""
    ]
   },
   {
@@ -1482,7 +1482,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_durations = \"C:/Users/pifar/iCloudDrive/Francesc/Tdr/Music/Violin/Models/durations_model.h5py\""
+    "save_durations = \"Models/durations_model.h5py\""
    ]
   },
   {
