--- a/Code.ipynb
+++ b/Code.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that the way Machine Learning algorithms and Neural Networks work has been explained, we can proceed to building one. The main goal of this part of the work will be to build a Machine Learning algorithm to generate music. As explained before, Artificial Neural Networks are powerful tools to classify and predict data. Is this ability to predict new data that opens the door for what humans would call \"creativity\", something rather controversial when talking about an Artificial Intelligence."
+    "Now that the way Machine Learning algorithms and Neural Networks work has been explained in the Theoretical Frame, we can proceed to building one. The main goal of this part of the work will be to build a Machine Learning algorithm to generate music. As explained before, Artificial Neural Networks are powerful tools to classify and predict data. Is this ability to predict new data that opens the door for what humans would call \"creativity\", something rather controversial when talking about an Artificial Intelligence."
    ]
   },
   {
